# harmonized-landsat-sentinel

./: CITATION.cff  README.md  Retrieving HLS surface reflectance.ipynb  Searching for HLS.ipynb  Upper Kings.ipynb  arrow_peak.geojson  generate_upper_kings_dataset.py  generate_upper_kings_dataset_2022.py  generate_upper_kings_dataset_2023.py  generate_upper_kings_dataset_2024.py  generate_upper_kings_dataset_2024_feb_july.py  generate_upper_kings_dataset_2025.py  generate_upper_kings_dataset_one_month.py  generate_upper_kings_dataset_testing.py  kings_canyon_ravine.geojson  makefile  pyproject.toml  slurm_generate_upper_kings_dataset_2022.sh  slurm_generate_upper_kings_dataset_2022.slurm  slurm_generate_upper_kings_dataset_2023.sh  slurm_generate_upper_kings_dataset_2024.sh  slurm_generate_upper_kings_dataset_2024_feb_july.slurm  slurm_generate_upper_kings_dataset_2025.sh  submit_all_slurm_jobs.fish
.github/workflows/: ci.yml
HLS/: HLS.py  HLS1.py  HLS1_CMR_connection.py  HLS1_connection.py  HLS1_granule.py  HLS1_landsat_granule.py  HLS1_sentinel_granule.py  HLS2.py  HLS2_CMR_connection.py  HLS2_CMR_login.py  HLS2_granule.py  HLS2_landsat_granule.py  HLS2_sentinel_granule.py  HLS_CMR_query.py  HLS_connection.py  HLS_granule.py  HLS_landsat_granule.py  HLS_sentinel_granule.py  constants.py  earliest_datetime.py  get_CMR_granule_ID.py  latest_datetime.py
harmonized_landsat_sentinel/: CLI.py  HLS1_CMR_connection.py  HLS2_CMR_connection.py  HLS2_connection.py  HLS2_earthaccess_connection.py  HLS2_earthaccess_login.py  HLS2_granule.py  HLS2_sentinel_granule.py  generate_HLS_timeseries.py  harmonized_landsat_sentinel.py  parse_arguments.py  timeseries.py
notebooks/: Retrieving HLS surface reflectance.ipynb  Timeseries.ipynb  Upper Kings.ipynb
tests/: test_HLS_imports.py
